# ndnLibdash

./: ui_qtsampleplayer.h
NFD-NFD-0.5.0/core/: scheduler.cpp
NFD-NFD-0.5.0/tools/nfdc/: status-main.hpp
libdash-ndn/: README.md
libdash-ndn-server/: ndn-das-server  ndn-das-server.cpp  ndn-das-server.hpp  readme.txt  trace-gen  trace-gen.cpp
libdash-ndn/doc/: .~lock.libdash.vsd#
libdash-ndn/libdash/: CMakeLists.txt
libdash-ndn/libdash/adap/: adaptation-logic-buffer-based.cpp
libdash-ndn/libdash/qtsampleplayer/: CMakeLists.txt  qtsampleplayer.ui
libdash-ndn/libdash/qtsampleplayer/Decoder/: LibavDecoder.cpp
libdash-ndn/libdash/qtsampleplayer/Managers/: MultimediaManager.cpp  MultimediaManager.h  MultimediaStream.cpp  MultimediaStream.h
libdash-ndn/libdash/qtsampleplayer/UI/: DASHPlayer.cpp  DASHPlayer.h  IDASHPlayerGuiObserver.h  QtSamplePlayerGui.cpp  QtSamplePlayerGui.h
libdash-ndn/libdash/qtsampleplayer/libdashframework/Adaptation/: AdaptationLogicFactory.cpp  AdaptationLogicFactory.h  GameAdaptation.cpp  GameAdaptation.h  IAdaptationLogic.h  QoeFairAdaptation.cpp  QoeFairAdaptation.h  RateBaseAdaptation.cpp  RateBaseAdaptation.h  RateBufferBaseAdaptation.cpp  RateBufferBaseAdaptation.h  ThroughputTrace.h
libdash-ndn/libdash/qtsampleplayer/libdashframework/Input/: DASHManager.cpp  DASHManager.h  DASHReceiver.cpp  DASHReceiver.h  IDASHManagerObserver.h  MediaObject.cpp  MediaObject.h  NDNConnection.cpp  NDNConnection.h  dash-consumer.cpp  dash-consumer.h
libdash-ndn/v5.0/: PlayerController.js  Trace.js  VisualizationController.js  dash.all.js  dash.all_v1.5.0.js  demo.html  style.css
ndn-cxx-ndn-cxx-0.5.0/tests/: identity-management-fixture.cpp
ndn-cxx_backup/: readme.md
